// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RankedTable Plugin renders correctly 1`] = `
<div>
  <div
    className="MuiFormControl-root-1 formControlClass"
  >
    <div>
      <div
        className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        onKeyDown={[Function]}
      >
        <label
          className="MuiFormLabel-root-18 MuiInputLabel-root-7 MuiInputLabel-formControl-12 MuiInputLabel-animated-15"
          data-shrink={false}
        >
          Neuron Instance, Type or BodyID (optional)
        </label>
        <div
          className="MuiInputBase-root-38 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-fullWidth-47 MuiInput-fullWidth-32 MuiInputBase-formControl-39 MuiInput-formControl-26 MuiInputBase-multiline-46 MuiInput-multiline-31"
          onClick={[Function]}
        >
          <div
            className="MuiPrivateTextarea-root-55"
          >
            <textarea
              aria-hidden="true"
              className="MuiPrivateTextarea-textarea-56 MuiPrivateTextarea-shadow-57"
              readOnly={true}
              rows="1"
              tabIndex={-1}
              value=""
            />
            <textarea
              aria-hidden="true"
              className="MuiPrivateTextarea-textarea-56 MuiPrivateTextarea-shadow-57"
              readOnly={true}
              rows={1}
              tabIndex={-1}
              value=""
            />
            <textarea
              aria-invalid={false}
              className="MuiPrivateTextarea-textarea-56 MuiInputBase-input-48 MuiInput-input-33 MuiInputBase-inputMultiline-50 MuiInput-inputMultiline-35"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              rows={1}
              style={
                Object {
                  "height": 19,
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
      <p
        aria-describedby={null}
        className="MuiTypography-root-66 MuiTypography-body1-75 MuiTypography-colorError-100 NeuronHelp-badge-5"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        title="Enter body ID, neuron name, or wildcard names using period+star (e.g., MBON.*). Warning: if using regular expressions, special characters like parentheses must be escaped (e.g. Delta6g\\\\\\\\(preQ7\\\\\\\\).*)"
      >
        ?
      </p>
    </div>
  </div>
  <fieldset
    className="MuiFormControl-root-1 formControlClass"
  >
    <div
      aria-label="preorpost"
      className="MuiFormGroup-root-101"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root-103"
      >
        <span
          className="MuiButtonBase-root-124 MuiIconButton-root-118 MuiPrivateSwitchBase-root-114 MuiRadio-root-109 MuiRadio-colorPrimary-112 MuiPrivateSwitchBase-checked-115 MuiRadio-checked-110"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-123"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-127"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              checked={true}
              className="MuiPrivateSwitchBase-input-117"
              disabled={false}
              name="preorpost"
              onChange={[Function]}
              type="radio"
              value="pre"
            />
          </span>
          <span
            className="MuiTouchRipple-root-171"
          />
        </span>
        <span
          className="MuiTypography-root-66 MuiTypography-body1-75 MuiFormControlLabel-label-108"
        >
          Rank outputs
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root-103"
      >
        <span
          className="MuiButtonBase-root-124 MuiIconButton-root-118 MuiPrivateSwitchBase-root-114 MuiRadio-root-109 MuiRadio-colorPrimary-112"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-123"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-127"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              checked={false}
              className="MuiPrivateSwitchBase-input-117"
              disabled={false}
              name="preorpost"
              onChange={[Function]}
              type="radio"
              value="post"
            />
          </span>
          <span
            className="MuiTouchRipple-root-171"
          />
        </span>
        <span
          className="MuiTypography-root-66 MuiTypography-body1-75 MuiFormControlLabel-label-108"
        >
          Rank inputs
        </span>
      </label>
    </div>
  </fieldset>
  <div
    className="MuiFormControl-root-1 formControlClass"
  >
    <label
      className="MuiFormControlLabel-root-103"
    >
      <span
        className="MuiSwitch-root-136"
      >
        <span
          className="MuiButtonBase-root-124 MuiIconButton-root-118 MuiPrivateSwitchBase-root-114 MuiSwitch-switchBase-139 MuiSwitch-colorPrimary-141"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-123"
          >
            <span
              className="MuiSwitch-icon-137"
            />
            <input
              checked={false}
              className="MuiPrivateSwitchBase-input-117"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
          </span>
          <span
            className="MuiTouchRipple-root-171"
          />
        </span>
        <span
          className="MuiSwitch-bar-144"
        />
      </span>
      <span
        className="MuiTypography-root-66 MuiTypography-body1-75 MuiFormControlLabel-label-108"
      >
        <p
          className="MuiTypography-root-66 MuiTypography-body1-75"
          style={
            Object {
              "display": "inline-flex",
            }
          }
        >
          Limit to high-confidence synapses
        </p>
      </span>
    </label>
  </div>
  <button
    className="MuiButtonBase-root-124 MuiButton-root-145 MuiButton-contained-156 MuiButton-containedPrimary-157 MuiButton-raised-159 MuiButton-raisedPrimary-160"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-146"
    >
      Submit
    </span>
    <span
      className="MuiTouchRipple-root-171"
    />
  </button>
</div>
`;

exports[`RankedTable Plugin renders correctly in public mode 1`] = `
<div>
  <div
    className="MuiFormControl-root-1 formControlClass"
  >
    <div>
      <div
        className="MuiFormControl-root-1 MuiFormControl-fullWidth-4"
        onKeyDown={[Function]}
      >
        <label
          className="MuiFormLabel-root-18 MuiInputLabel-root-7 MuiInputLabel-formControl-12 MuiInputLabel-animated-15"
          data-shrink={false}
        >
          Neuron Instance, Type or BodyID (optional)
        </label>
        <div
          className="MuiInputBase-root-38 MuiInput-root-25 MuiInput-underline-29 MuiInputBase-fullWidth-47 MuiInput-fullWidth-32 MuiInputBase-formControl-39 MuiInput-formControl-26 MuiInputBase-multiline-46 MuiInput-multiline-31"
          onClick={[Function]}
        >
          <div
            className="MuiPrivateTextarea-root-55"
          >
            <textarea
              aria-hidden="true"
              className="MuiPrivateTextarea-textarea-56 MuiPrivateTextarea-shadow-57"
              readOnly={true}
              rows="1"
              tabIndex={-1}
              value=""
            />
            <textarea
              aria-hidden="true"
              className="MuiPrivateTextarea-textarea-56 MuiPrivateTextarea-shadow-57"
              readOnly={true}
              rows={1}
              tabIndex={-1}
              value=""
            />
            <textarea
              aria-invalid={false}
              className="MuiPrivateTextarea-textarea-56 MuiInputBase-input-48 MuiInput-input-33 MuiInputBase-inputMultiline-50 MuiInput-inputMultiline-35"
              disabled={false}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              required={false}
              rows={1}
              style={
                Object {
                  "height": 19,
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
      <p
        aria-describedby={null}
        className="MuiTypography-root-66 MuiTypography-body1-75 MuiTypography-colorError-100 NeuronHelp-badge-5"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        title="Enter body ID, neuron name, or wildcard names using period+star (e.g., MBON.*). Warning: if using regular expressions, special characters like parentheses must be escaped (e.g. Delta6g\\\\\\\\(preQ7\\\\\\\\).*)"
      >
        ?
      </p>
    </div>
  </div>
  <fieldset
    className="MuiFormControl-root-1 formControlClass"
  >
    <div
      aria-label="preorpost"
      className="MuiFormGroup-root-101"
      role="radiogroup"
    >
      <label
        className="MuiFormControlLabel-root-103"
      >
        <span
          className="MuiButtonBase-root-124 MuiIconButton-root-118 MuiPrivateSwitchBase-root-114 MuiRadio-root-109 MuiRadio-colorPrimary-112 MuiPrivateSwitchBase-checked-115 MuiRadio-checked-110"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-123"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-127"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0-5C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              checked={true}
              className="MuiPrivateSwitchBase-input-117"
              disabled={false}
              name="preorpost"
              onChange={[Function]}
              type="radio"
              value="pre"
            />
          </span>
          <span
            className="MuiTouchRipple-root-171"
          />
        </span>
        <span
          className="MuiTypography-root-66 MuiTypography-body1-75 MuiFormControlLabel-label-108"
        >
          Rank outputs
        </span>
      </label>
      <label
        className="MuiFormControlLabel-root-103"
      >
        <span
          className="MuiButtonBase-root-124 MuiIconButton-root-118 MuiPrivateSwitchBase-root-114 MuiRadio-root-109 MuiRadio-colorPrimary-112"
          onBlur={[Function]}
          onContextMenu={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={null}
        >
          <span
            className="MuiIconButton-label-123"
          >
            <svg
              aria-hidden="true"
              className="MuiSvgIcon-root-127"
              focusable="false"
              role="presentation"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
              />
            </svg>
            <input
              checked={false}
              className="MuiPrivateSwitchBase-input-117"
              disabled={false}
              name="preorpost"
              onChange={[Function]}
              type="radio"
              value="post"
            />
          </span>
          <span
            className="MuiTouchRipple-root-171"
          />
        </span>
        <span
          className="MuiTypography-root-66 MuiTypography-body1-75 MuiFormControlLabel-label-108"
        >
          Rank inputs
        </span>
      </label>
    </div>
  </fieldset>
  
  <button
    className="MuiButtonBase-root-124 MuiButton-root-145 MuiButton-contained-156 MuiButton-containedPrimary-157 MuiButton-raised-159 MuiButton-raisedPrimary-160"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-146"
    >
      Submit
    </span>
    <span
      className="MuiTouchRipple-root-171"
    />
  </button>
</div>
`;
